# BrainPrint

./: .gitignore  README.md  Untitled.ipynb  setup.cfg
src/brainprint/: __init__.py  atlas.py  logs.py  protocol.py
src/brainprint/dl/: data_generation.py  evaluation.ipynb  hypermodel.py  hyperresnet.py  hyperxception.py  load.py  load_bak.py  model.py  resnet.py  serialization.ipynb  target_distributions.ipynb  tl_age_to_bfi.ipynb  tl_age_to_bfi.pkl  tl_sex_to_age.ipynb  tl_sex_to_age.pkl  tl_sex_to_bfi.ipynb  tl_sex_to_bfi.pkl  utils.py
src/brainprint/dl/HyperXception/Sex/: oracle.json
src/brainprint/recon_all/: __init__.py  age_distribution.ipynb  differences.ipynb  differences.py  execution_configuration.py  logs.py  metric.py  models.py  plot_destrieux.py  questionnaire.ipynb  read.py  results.py  sex.ipynb  sex.py  sex_bak.py  stats.ipynb  surfice_scripts.py  traits_explorer.py  utils.py
src/brainprint/recon_all/models/: flaml.ipynb  model_configurations.py  model_fitting.py  run_age_search.py  run_sex_search.py  tpot.ipynb
src/brainprint/recon_all/models/pipelines_bak/: default_robustscaler_LogisticRegression.pkl  default_robustscaler_SVC.pkl  default_standardscaler_LogisticRegression.pkl  flair_standardscaler_RandomForestClassifier.pkl  flair_standardscaler_SVC.pkl  mprage_and_3t_and_flair_robustscaler_LogisticRegression.pkl  mprage_and_3t_and_flair_standardscaler_SVC.pkl  mprage_and_3t_and_t2_standardscaler_LogisticRegression.pkl  mprage_and_3t_and_t2_standardscaler_RandomForestClassifier.pkl  t2_robustscaler_SVC.pkl
src/brainprint/recon_all/sex/: flaml.joblib  model_configurations.py  prep.ipynb  run_sex_search.py  tpot.ipynb
src/brainprint/recon_all/tests/: __init__.py  test_results.py
(+208 files in other folders)
