[metadata]
name = brainprint
version = 0.1.0
author = Zvi Baratz
author_email = z.baratz@gmail.com
description = Evaluate and compare MRI-derived brain metrics.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_files = LICENSE
keywords = mri, neuroscience, brain
url = https://github.com/ZviBaratz/brainprint
project_urls =
    Source = https://github.com/ZviBaratz/brainprint/
    Documentation = https://brainprint.readthedocs.io/en/latest/
    Bug Reports = https://github.com/ZviBaratz/brainprint/issues/
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3 :: Only

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6, <4
install_requires =
    bokeh
    dask
    distributed
    imageio
    jupyterlab_code_formatter
    jupyter_nbextensions_configurator
    matplotlib
    mayavi
    nilearn
    numpy
    pandas
    pingouin
    pyarrow
    pysurfer
    seaborn
    sklearn
    swifter
    tqdm

[options.extras_require]
dev =
    autopep8
    black
    flake8~=3.7
    ipython
    isort~=5.8

[options.packages.find]
where = src

[flake8]
max-complexity = 10
exclude =
    __pycache__,
    .git,
    .pytest_cache,
    .tox,
    build,
    dist,
    tests,
    venv
per-file-ignores =
    */__init__.py: F401
    */messages.py: E501
    */logs.py: E501